--- a/server/package.json
+++ b/server/package.json
@@ -20,11 +20,7 @@
     "@babel/core": "^7.9.0",
     "@babel/node": "^7.8.7",
     "@babel/preset-env": "^7.9.5",
-    "nodemon": "^2.0.3",
-    "webpack": "^4.42.1",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-middleware": "^3.7.2",
-    "webpack-dev-server": "^3.10.3"
+    "nodemon": "^2.0.3"
   },
   "dependencies": {
     "express": "^4.17.1"
